# myopenopt

./: pyproject.toml
tests/: test_myopenopt.py
