[tool.poetry]
authors = ["Mikio Kubo <kubomikio@gmail.com>", "SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`myopenopt` is a package for myopenopt."
homepage = "https://github.com/SaitoTsutomu/myopenopt"
license = "PSFL"
name = "myopenopt"
readme = "README.rst"
version = "0.0.3"

[tool.poetry.dependencies]
FuncDesigner = "^0.5629"
openopt = "^0.5629"
python = "3.7.*"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pytest = "^5.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
